--- a/DarkCities/app/src/main/res/values/strings.xml
+++ b/DarkCities/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">Dark Cities</string>
+    <string name="splash">Splash Screen</string>
+    <string name="game">Game Screen</string>
+    <string name="menu">Menu Screen</string>
+    <string name="settings">Settings Screen</string>
 </resources>
